Fix margins to prevent footer overflow and footer color

--- a/dash-if-reference-player/src/app/components/metrics-view/metrics-view.component.css
+++ b/dash-if-reference-player/src/app/components/metrics-view/metrics-view.component.css
@@ -1,4 +1,5 @@
 mat-card {
   height: 290px;
   padding: 10px 10px 0;
+  margin-bottom: 60px;
 }
